# scolib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/python/: scolib_py.cpp
cmake/: scolibConfig.cmake.in
include/scolib/: scolib.hpp  version.hpp
src/circuit/: circuit.cpp
src/core/: version.cpp
tests/: test_basic.cpp
